fixed background cutoff

--- a/styles/main.css
+++ b/styles/main.css
@@ -8,6 +8,8 @@ body {
   background-image: url("../assets/bg.webp");
   background-repeat: no-repeat;
   background-attachment: fixed;
+  background-size: cover;
+  background-position: center;
   font-family: "Ubuntu", sans-serif;
   text-decoration: none;
 }
